--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@ th {
   background-color: #9999ff; 
 }
 a:link, a:visited {
-  background-color: #f44336;
-  color: white;
+  background-color: #99ccff;
+  color: black;
   padding: 14px 25px;
   text-align: center;
   text-decoration: none;
