--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@ th, td {
 th {
   background-color: #9999ff; 
 }
+tr {
+  background-color: #e6ffff;
+}
 a:link, a:visited {
   background-color: #99ccff;
   color: black;
