--- a/flexbox/style.css
+++ b/flexbox/style.css
@@ -1,30 +1,34 @@
+.body {
+    background-color: #3366ff;
+}
+
 .menu {
     color: greenyellow;
-    background-color: darkorchid;
+    background-color: lightskyblue;
     font-size: 2em;
     display: flex;
     flex-wrap: wrap;
   }
   .header {
-    background-color: antiquewhite;
+    background-color: lightsteelblue;
     padding: 0.8em;
     margin: 1rem 1rem 1rem 0;
     width: 100%;
     height: 20vh;
   }
   .sidebar {
-    background-color: red;
+    background-color: rgb(103, 236, 253);
     height: 60vh;
     margin: 0 1rem 1rem 0;
     width: 30%;
   }
   .menu_item {
-    background-color: red;
+    background-color: rgb(63, 253, 244);
     margin: 0 0 1rem 0;
     width: 67%;
   }
   .footer {
-    background-color: red;
+    background-color:  lightskyblue;
     height: 20vh;
     margin: 0 1rem 1rem 0;
     width: 100%;
