--- a/flexbox/style.css
+++ b/flexbox/style.css
@@ -1,34 +1,37 @@
-.body {
+.tytul {
+    background-color: lightcoral;
+}
+body {
     background-color: #3366ff;
 }
 
 .menu {
     color: greenyellow;
-    background-color: lightskyblue;
+    background-color: #99ccff;
     font-size: 2em;
     display: flex;
     flex-wrap: wrap;
   }
   .header {
-    background-color: lightsteelblue;
+    background-color: rgb(163, 171, 245);
     padding: 0.8em;
     margin: 1rem 1rem 1rem 0;
     width: 100%;
     height: 20vh;
   }
   .sidebar {
-    background-color: rgb(103, 236, 253);
+    background-color: rgb(66, 131, 252);
     height: 60vh;
     margin: 0 1rem 1rem 0;
     width: 30%;
   }
   .menu_item {
-    background-color: rgb(63, 253, 244);
+    background-color: rgb(163, 171, 245);
     margin: 0 0 1rem 0;
     width: 67%;
   }
   .footer {
-    background-color:  lightskyblue;
+    background-color:  rgb(50, 98, 255);
     height: 20vh;
     margin: 0 1rem 1rem 0;
     width: 100%;
