--- a/style.css
+++ b/style.css
@@ -59,3 +59,14 @@ a:hover, a:active {
     width: 80%;
     margin: 10px;
 }
+.link {
+  padding: 1rem;
+  margin-left: 10px;
+  margin-top: 10px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  width: 70%;
+}
