--- a/grid/style.css
+++ b/grid/style.css
@@ -6,4 +6,30 @@
     background-color: rgb(50, 117, 205);
     padding: 5px;
     height: 100vh;
+    display: grid;
+    grid-template-columns: 1fr 2fr 0.5fr;
+    grid-template-areas: 
+    "a a e"
+    "b c e"
+    "d d e";
+  }
+  header {
+      background-color: red;
+      grid-area: a;
+  }
+  nav {
+      background-color: yellow;
+      grid-area: b;
+  }
+  main {
+      background-color: lightskyblue;
+      grid-area: c;
+  }
+  aside {
+      background-color: pink;
+      grid-area: e;
+  }
+  footer {
+      background-color: lightgreen;
+      grid-area: d;
   }
