--- a/grid/style.css
+++ b/grid/style.css
@@ -16,14 +16,17 @@
   header {
       background-color: red;
       grid-area: a;
+      height: 10vh;
   }
   nav {
       background-color: yellow;
       grid-area: b;
+      height: 75vh;
   }
   main {
       background-color: lightskyblue;
       grid-area: c;
+      height: 75vh;
   }
   aside {
       background-color: pink;
@@ -32,4 +35,5 @@
   footer {
       background-color: lightgreen;
       grid-area: d;
+      height: 15vh;
   }
