--- a/grid/grid1/style1.css
+++ b/grid/grid1/style1.css
@@ -4,36 +4,35 @@
   }
   .container {
     background-color: rgb(50, 117, 205);
-    padding: 5px;
     height: 100vh;
     display: grid;
     grid-template-columns: 1fr 2fr 0.5fr;
     grid-template-areas: 
-    "a a e"
-    "b c e"
-    "d d e";
+    "a b e"
+    "a c e"
+    "a d e";
   }
   header {
       background-color: red;
       grid-area: a;
-      height: 10vh;
+      height: 100vh;
   }
   nav {
-      background-color: yellow;
+      background-color: lightgreen;
       grid-area: b;
-      height: 75vh;
+      height: 35vh;
   }
   main {
       background-color: lightskyblue;
       grid-area: c;
-      height: 75vh;
+      height: 35vh;
   }
   aside {
       background-color: pink;
       grid-area: e;
   }
   footer {
-      background-color: lightgreen;
+      background-color: yellow;
       grid-area: d;
-      height: 15vh;
+      height: 30vh;
   }
