--- a/grid/grid1/style1.css
+++ b/grid/grid1/style1.css
@@ -6,7 +6,7 @@
     background-color: rgb(50, 117, 205);
     height: 100vh;
     display: grid;
-    grid-template-columns: 1fr 1fr 2fr 0.5fr;
+    grid-template-columns: 0.5fr 1fr 2fr 0.5fr;
     grid-template-areas: 
     "f a b e"
     "f a c e"
@@ -39,27 +39,17 @@
   .menu {
     grid-area: f;
     background-color: #99ccff;
-    height: auto;
   }
   .link {
+    background-color: yellow;
     padding: 1rem;
     margin-left: 10px;
     margin-top: 10px;
     margin-right: 10px;
     margin-bottom: 10px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
+    padding: 10px;
     width: 70%;
-  }
-  a:link, a:visited {
-    background-color: #99ccff;
-    color: black;
-    padding: 14px 25px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-  }
-  a:hover, a:active {
-    background-color: red;
   }
