--- a/grid/grid1/style1.css
+++ b/grid/grid1/style1.css
@@ -41,15 +41,30 @@
     background-color: #99ccff;
   }
   .link {
-    background-color: yellow;
     padding: 1rem;
     margin-left: 10px;
     margin-top: 10px;
     margin-right: 10px;
     margin-bottom: 10px;
-    padding: 10px;
-    width: 70%;
     text-align: center;
     text-decoration: none;
     display: inline-block;
+    width: 70%;
   }
+  a:link, a:visited {
+    background-color: #99ccff;
+    color: black;
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+  
+  }
+  
+  a:hover, a:active {
+    background-color: red;
+  
+  }
+  li {
+    list-style-type: none;
+}
