--- a/grid/grid1/style1.css
+++ b/grid/grid1/style1.css
@@ -68,3 +68,19 @@
   li {
     list-style-type: none;
 }
+table, th, td {
+    border: 1px solid black;
+  }
+  table {
+    border-collapse: collapse;
+  }
+  th, td {
+    padding: 8px;
+    text-align: center;
+  }
+  th {
+    background-color: #9999ff; 
+  }
+  tr {
+    background-color: #e6ffff;
+  }
