--- a/grid/grid2/style2.css
+++ b/grid/grid2/style2.css
@@ -74,3 +74,19 @@ a:hover, a:active {
 li {
     list-style-type: none;
 }
+table, th, td {
+    border: 1px solid black;
+  }
+  table {
+    border-collapse: collapse;
+  }
+  th, td {
+    padding: 8px;
+    text-align: center;
+  }
+  th {
+    background-color: #9999ff; 
+  }
+  tr {
+    background-color: #e6ffff;
+  }
