--- a/grid/grid4/style4.css
+++ b/grid/grid4/style4.css
@@ -6,33 +6,82 @@
     background-color: rgb(50, 117, 205);
     height: 100vh;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 0.5fr 1fr 1fr 1fr;
     grid-template-areas: 
-    "b b b"
-    "a c e"
-    "a d d";
+    "g b b b"
+    "g a c e"
+    "g a d d";
   }
-  header {
+  .ban {
       background-color: red;
       grid-area: a;
       height: auto;
   }
-  nav {
+  .nawi {
       background-color: lightgreen;
       grid-area: b;
       height: auto;
   }
-  main {
+  .glow {
       background-color: lightskyblue;
       grid-area: c;
       height: auto;
   }
-  aside {
+  .pob {
       background-color: pink;
       grid-area: e;
   }
-  footer {
+  .stop {
       background-color: yellow;
       grid-area: d;
       height: auto;
+  }
+  .menu {
+    grid-area: g;
+    background-color: #99ccff;
+    height: 100vh;
+  }
+.link {
+    padding: 1rem;
+    margin-left: 10px;
+    margin-top: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    width: 70%;
+  }
+a:link, a:visited {
+    background-color: #99ccff;
+    color: black;
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+  
+  }
+  
+a:hover, a:active {
+    background-color: red;
+  
+  }
+li {
+    list-style-type: none;
+}
+table, th, td {
+    border: 1px solid black;
+  }
+  table {
+    border-collapse: collapse;
+  }
+  th, td {
+    padding: 8px;
+    text-align: center;
+  }
+  th {
+    background-color: #9999ff; 
+  }
+  tr {
+    background-color: #e6ffff;
   }
