--- a/grid/grid1/style1.css
+++ b/grid/grid1/style1.css
@@ -4,7 +4,7 @@
   }
   .container {
     background-color: rgb(50, 117, 205);
-    height: auto;
+    height: 100%;
     display: grid;
     grid-template-columns: 0.5fr 1fr 2fr 0.5fr;
     grid-template-areas: 
