--- a/grid/grid2/style2.css
+++ b/grid/grid2/style2.css
@@ -14,37 +14,37 @@
 .ban {
 background-color:red;
 grid-area: a;
-height: 100%;
+height: 100vh;
 }
 .nawi {
     background-color: lightgreen;
     grid-area: b;
-    height: 10%;
+    height: 10vh;
 }
 .glow {
 background-color: skyblue;
 grid-area: c;
-height: 45%;
+height: 45vh;
 }
 .pob {
     grid-area: d;
     background-color: pink;
-    height: 90%;
+    height: 90vh;
 }
 .stop {
 background-color: yellow;
 grid-area: e;
-height: 45%;
+height: 45vh;
 }
 .dod {
 background-color: yellow;
 grid-area: f;
-height: 45%;
+height: 45vh;
 }
 .menu {
     grid-area: g;
     background-color: #99ccff;
-    height: 100%;
+    height: 100vh;
   }
 .link {
     padding: 1rem;
