--- a/grid/grid3/style3.css
+++ b/grid/grid3/style3.css
@@ -15,32 +15,32 @@
   .ban {
       background-color: red;
       grid-area: a;
-      height: 100%;
+      height: 100vh;
   }
   .nawi {
       background-color: lightgreen;
       grid-area: b;
-      height: 15%;
+      height: 15vh;
   }
   .glow {
       background-color: lightskyblue;
       grid-area: c;
-      height: 45%;
+      height: 45vh;
   }
   .pob {
       background-color: pink;
       grid-area: e;
-      height: 45%;
+      height: 45vh;
   }
   .stop {
       background-color: yellow;
       grid-area: d;
-      height: 40%;
+      height: 40vh;
   }
   .menu {
     grid-area: g;
     background-color: #99ccff;
-    height: 100%;
+    height: 100vh;
   }
 .link {
     padding: 1rem;
