--- a/grid/grid2/style2.css
+++ b/grid/grid2/style2.css
@@ -3,7 +3,7 @@
 }
 .container {
     background-color: white;
-    height: 100%;
+    height: 100vh;
     display: grid;
     grid-template-columns: 0.5fr 1fr 1fr 1fr 1fr;
     grid-template-areas: 
