--- a/grid/grid3/style3.css
+++ b/grid/grid3/style3.css
@@ -4,7 +4,7 @@
   }
   .container {
     background-color: rgb(50, 117, 205);
-    height: 100%;
+    height: 100vh;
     display: grid;
     grid-template-columns: 0.5fr 1fr 1fr 1fr;
     grid-template-areas: 
