--- a/grid/grid12/style12.css
+++ b/grid/grid12/style12.css
@@ -6,11 +6,11 @@
     background-color: rgb(50, 117, 205);
     height: 100vh;
     display: grid;
-    grid-template-columns: 1.5fr 1fr 1fr 1.5fr 1fr 1fr;
+    grid-template-columns: 0.5fr 1.5fr 1fr 1fr 1.5fr 1fr 1fr;
     grid-template-areas: 
-    "a a b b g g"
-    "c h h f e e"
-    "i i d d e e";
+    "j a a b b g g"
+    "j c h h f e e"
+    "j i i d d e e";
   }
   header {
       background-color: red;
@@ -56,5 +56,35 @@
     background-color: purple;
     grid-area: i;
     height: auto;
+  }
+  .menu {
+    grid-area: j;
+    background-color: #99ccff;
+    height: 100vh;
+  }
+.link {
+    padding: 1rem;
+    margin-left: 10px;
+    margin-top: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    width: 70%;
+  }
+a:link, a:visited {
+    background-color: #99ccff;
+    color: black;
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+  
+  }
+  
+a:hover, a:active {
+    background-color: red;
+  
   }
   
