--- a/grid/grid9/style9.css
+++ b/grid/grid9/style9.css
@@ -6,11 +6,11 @@
     background-color: rgb(50, 117, 205);
     height: 100vh;
     display: grid;
-    grid-template-columns: 1fr 1.5fr 0.5fr;
+    grid-template-columns: 0.5fr 1fr 1.5fr 0.5fr;
     grid-template-areas: 
-    "b b b"
-    "a c e"
-    "d d d";
+    "g b b b"
+    "g a c e"
+    "g d d d";
   }
   header {
       background-color: red;
@@ -36,6 +36,36 @@
       background-color: yellow;
       grid-area: d;
       height: 10vh;
+  }
+  .menu {
+    grid-area: g;
+    background-color: #99ccff;
+    height: 100vh;
+  }
+.link {
+    padding: 1rem;
+    margin-left: 10px;
+    margin-top: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    width: 70%;
+  }
+a:link, a:visited {
+    background-color: #99ccff;
+    color: black;
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+  
+  }
+  
+a:hover, a:active {
+    background-color: red;
+  
   }
   
   
